<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editTextFormName"
        android:hint="@string/lbl_name"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <EditText
            android:layout_marginTop="25dp"
            android:id="@+id/editTextZipCode"
            android:hint="@string/lbl_zipcode"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"/>

        <Button
            android:id="@+id/btnIdFillAdress"
            android:hint="@string/lbl_fill_adress"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:layout_marginTop="25dp" />

    </LinearLayout>


    <EditText
        android:id="@+id/editTextType"
        android:hint="@string/lbl_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextStreet"
        android:hint="@string/lbl_street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextNeighborhood"
        android:hint="@string/lbl_neighborhood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/editTextCity"
        android:hint="@string/lbl_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <EditText
        android:id="@+id/editTextState"
        android:hint="@string/lbl_state"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextTelephone"
                android:layout_weight="8"
                android:inputType="number"
                android:hint="@string/lbl_telephone"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="+"
                android:layout_weight="2"
                android:id="@+id/btnAddTelephone"/>
        </LinearLayout>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/listViewTelephones">

        </ListView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextEmail"
                android:layout_weight="8"
                android:hint="@string/lbl_email"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="+"
                android:layout_weight="2"
                android:id="@+id/btnAddEmail"/>
        </LinearLayout>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/listViewEmails">

        </ListView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/editTextSocialNetwork"
                android:layout_weight="8"
                android:hint="@string/lbl_social_network"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="+"
                android:layout_weight="2"
                android:id="@+id/btnAddSocialNetwork"/>
        </LinearLayout>


        <ListView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/listViewSocialNetworks">

        </ListView>

    </LinearLayout>
</ScrollView>